# CodePulse

./: .gitattributes  .gitignore  CHANGELOG.md  COMPREHENSIVE_GUIDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  POWERSHELL_GUIDE.md  PYTHON_VERSION_GUIDE.md  QUICK_START.md  README.md  README_AR.md  benchmark.py  codepulse.bat  codepulse.py  codepulse.sh  comprehensive_scan.py  fast_scan.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test_install.py
.github/workflows/: ci.yml
docs/: CONFIG.md  HTML_REPORTS_GUIDE.md  LANGUAGES.md  OVERVIEW.md  PERFORMANCE_FEATURES.md  SECURITY.md
examples/: README.md
src/core/: advanced_language_scanner.py  advanced_metrics.py  advanced_security.py  ai_engine.py  analyzer.py  cache.py  cli.py  clone_detection.py  code_patterns.py  cross_file_analysis.py  deep_analysis.py  deep_analysis_standalone.py  fast_scanner.py  incremental_analyzer.py  js_scanner.py  multi_format_scanner.py  parallel_scanner.py  performance_analyzer.py  quality_trends.py  scanner.py  smell_detector.py
src/modules/: security.py
src/reporters/: __init__.py  html_reporter.py
tests/: test_performance.py  test_scanner.py
