[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepulse"
version = "1.0.0"
description = "AI-Powered Static Code Analysis Tool - Clean, Fast, and Easy to Use"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

keywords = [
    "code-analysis",
    "security-scanner",
    "static-analysis",
    "vulnerability-detection",
    "code-quality",
    "sast",
    "owasp",
    "ai-powered"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

ai = [
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/YourName/CodePulse"
Repository = "https://github.com/YourName/CodePulse"
"Bug Tracker" = "https://github.com/YourName/CodePulse/issues"

[project.scripts]
codepulse = "codepulse:main"

[tool.setuptools]
packages = ["src", "src.core", "src.reporters", "src.utils", "src.modules"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
